debts fixed
